--- a/Sources/Projects/Projects.docc/theme-settings.json
+++ b/Sources/Projects/Projects.docc/theme-settings.json
@@ -1,9 +1,15 @@
+// theme-settings.json
+
 {
-  "theme": {
-    "color": {
-      "header": "#00123E",
-      "documentation-intro-fill": "radial-gradient(circle at top, var(--color-header) 30%, #000 100%)",
-      "documentation-intro-accent": "var(--color-header)"
+    "theme": {
+        "color": {
+            "standard-green": "#83ac38",
+            "header": "#00123E",
+            "documentation-intro-fill": "radial-gradient(circle at top, var(--color-header) 30%, #000 100%)",
+            "documentation-intro-accent": "var(--color-header)"
+        },
+        "typography": {
+            "html-font": "serif"
+        }
     }
-  }
 }
