--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           swift package --allow-writing-to-directory ./docs \
             generate-documentation --target Projects \
             --disable-indexing \
-            --hosting-base-path projects \
+            --hosting-base-path Projects \
             --transform-for-static-hosting \
             --output-path ./docs
 
