Create nicer header background

--- a/Sources/Projects/Projects.docc/theme-settings.json
+++ b/Sources/Projects/Projects.docc/theme-settings.json
@@ -1,15 +1,19 @@
-// theme-settings.json
-
 {
     "theme": {
         "color": {
-            "standard-green": "#83ac38",
-            "header": "#00123E",
-            "documentation-intro-fill": "radial-gradient(circle at top, var(--color-header) 30%, #000 100%)",
-            "documentation-intro-accent": "var(--color-header)"
-        },
-        "typography": {
-            "html-font": "serif"
+            "primary": "#25252A",
+            "secondary": "#2A2B30",
+            "fill": {
+                "dark": "var(--color-primary)",
+                "light": "#FFFFFF"
+            },
+            "fill-secondary": {
+                "dark": "var(--color-secondary)",
+                "light": "#FFFFFF"
+            },
+            "documentation-intro-fill": "radial-gradient(circle at top, var(--color-fill-secondary) 30%, #151516 100%)",
+            "documentation-intro-accent": "var(--color-secondary)",
+            "nav-solid-background": "var(--color-fill-primary)"
         }
     }
 }
